buildscript {

    repositories {
        mavenCentral()
        jcenter()
    }

    dependencies {
        classpath "org.jetbrains.dokka:dokka-gradle-plugin:0.10.0"
    }
}

apply plugin: 'java'

group 'com.tyytogether'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    testCompile "junit:junit:4.11"  // Or whatever version
    compileOnly 'org.ow2.asm:asm:5.0.4'
}
